Actualziacion index.html 02

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                             <img class="imagen__muñeco" id="mostrar__muñeco" src="Img/Muñeco.png" alt="">
                             <p id="print__text" class="presentacion__mostrar__texto__parrafo">
-                            <strong>Ningún mensaje fue encontrado</strong>
+                            <strong>Ningún mensaje fue encontrado</strong><br>
                             Ingrese el texto que desees encriptaro desencriptar    
                             </p>
         
